# Gateway

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODING_STYLE.md  README.md  help.md
configs/: gateway.json  simulator.json
include/: ring_buffer.hpp
include/gateway/core/: config.hpp  error.hpp  message.hpp
include/gateway/northbound/: console_mqtt_client.hpp  fake_mqtt_client.hpp  mqtt_client.hpp  mqtt_message_mapper.hpp
include/gateway/protocol/: modbus_tcp_codec.hpp  modbus_tcp_framer.hpp
include/gateway/queue/: spsc_ring_buffer.hpp
include/gateway/rule/: rule.hpp  rule_engine.hpp
include/gateway/runtime/: command_dispatcher.hpp  gateway_app.hpp  worker.hpp
include/gateway/simulator/: modbus_device_simulator.hpp
include/gateway/southbound/: device_poller.hpp  modbus_device_simulator.hpp  modbus_point_mapper.hpp  modbus_tcp_client.hpp
src/: gateway_main.cpp  simulator_main.cpp
src/core/: config.cpp  error.cpp  message.cpp
src/northbound/: console_mqtt_client.cpp  mqtt_message_mapper.cpp
src/protocol/: modbus_tcp_codec.cpp  modbus_tcp_framer.cpp
src/rule/: rule_engine.cpp
src/runtime/: command_dispatcher.cpp  gateway_app.cpp  worker.cpp
src/simulator/: modbus_device_simulator.cpp
src/southbound/: device_poller.cpp  modbus_device_simulator.cpp  modbus_point_mapper.cpp  modbus_tcp_client.cpp
tests/: test_command_dispatcher.cpp  test_command_flow.cpp  test_config.cpp  test_device_poller.cpp  test_message_model.cpp  test_modbus_device_simulator.cpp  test_modbus_point_mapper.cpp  test_modbus_tcp_codec.cpp  test_modbus_tcp_framer.cpp  test_mqtt_message_mapper.cpp  test_rule_engine.cpp  test_spsc_ring_buffer.cpp
